# vsomeip_Playground

./: .gitattributes  README.md
01_ClientServerTrial/: CMakeLists.txt  client_main.cpp  client_space.hpp  server_main.cpp  server_simple.hpp
